metadata/force-app/main/default/objects/Custom_Object_Too__c/Custom_Object_Too__c.object-meta.xml
<CustomObject>
    <label>Custom Object - Child One</label>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Object Too</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>