metadata/force-app/main/default/objects/Custom_Object_Too__c/fields/Custom_Object_Won__c.field-meta.xml
<CustomField>
    <fullName>Custom_Object_Won__c</fullName>
    <label>Custom Object Won</label>
    <referenceTo>Custom_Object_Won__c</referenceTo>
    <relationshipName>Custom_Object_Too</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>