metadata/force-app/main/default/objects/Custom_Object_Too__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>First Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>