metadata/force-app/main/default/objects/Custom_Object_Too__c/fields/Rich_Text_Field__c.field-meta.xml
<CustomField>
    <fullName>Rich_Text_Field__c</fullName>
    <label>Rich Text Field</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>